Android: Fix the player state when play() is called with no media

If play() is called before any media is set, don't change the current state
to PlayingState.

This was inconsistent with the other backends, and required an unneeded
call to stop() when a media later got set.

Task-number: QTBUG-68998
Change-Id: I8281c7bf83e36e9a80f2136ca9fc2430c55e8bd6
Reviewed-by: Christian Stromme <christian.stromme@qt.io>