src/plugins/android/src/mediaplayer/qandroidmediaplayercontrol.cpp
@@ -379,8 +379,6 @@ void QAndroidMediaPlayerControl::play()
         setMedia(mMediaContent, mMediaStream);
     }
 
-    setState(QMediaPlayer::PlayingState);
-
     if ((mState & (AndroidMediaPlayer::Prepared
                    | AndroidMediaPlayer::Started
                    | AndroidMediaPlayer::Paused
@@ -389,6 +387,7 @@ void QAndroidMediaPlayerControl::play()
         return;
     }
 
+    setState(QMediaPlayer::PlayingState);
     mMediaPlayer->play();
 }
 
